// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders 1`] = `
<input
  className="sc-bdVaJa bPvjUk"
  maxLength={undefined}
  name="test"
  onBlur={[Function]}
  onChange={[Function]}
  onKeyPress={[Function]}
  placeholder={undefined}
  readOnly={false}
  type="text"
  value=""
/>
`;

exports[`renders textarea 1`] = `
<input
  className="sc-bdVaJa bPvjUk"
  maxLength={undefined}
  name="test"
  onBlur={[Function]}
  onChange={[Function]}
  onKeyPress={[Function]}
  placeholder={undefined}
  readOnly={false}
  type="text"
  value=""
/>
`;

exports[`renders textarea with props 1`] = `
<input
  className="CLASSNAME sc-bdVaJa bPvjUk"
  maxLength={20}
  name="test"
  onBlur={[Function]}
  onChange={[Function]}
  onKeyPress={[Function]}
  placeholder="PLACEHOLDER"
  readOnly={true}
  type="text"
  value="VALUE"
/>
`;

exports[`renders with props 1`] = `
<input
  className="CLASSNAME sc-bdVaJa bPvjUk"
  maxLength={20}
  name="test"
  onBlur={[Function]}
  onChange={[Function]}
  onKeyPress={[Function]}
  placeholder="PLACEHOLDER"
  readOnly={true}
  type="text"
  value="VALUE"
/>
`;
